# VulcanBench

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  pricing.local.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
alembic/: env.py
backend/: Dockerfile  app.py  db.py
dashboard/: .env.example  Dockerfile  README.md
docs/: ARCHITECTURE.md  LARGE_TASK_HANDBOOK.md  QUICKSTART.md  ROADMAP.md  TASK_CONTRIBUTION.md
harness/: __init__.py  cli.py  compare.py  cost_estimate.py  cost_priors.py  effort.py  grader_eval.py  leaderboard.py  pricing.py  redaction.py  regrade.py  report.py  spec_check.py  suite.py  task_metadata.py  tasks.py  validate.py
sandbox/: Dockerfile.aiohttp-13016  Dockerfile.anyio-1191  Dockerfile.base  Dockerfile.celery-10346  Dockerfile.flask-5928  Dockerfile.mypy-21544  Dockerfile.node-ts  Dockerfile.pennylane-9459  Dockerfile.poetry-10943  Dockerfile.pytest-14647  Dockerfile.rust  Dockerfile.sympy-29877
scripts/: check_spec.py  effort_pareto.py  export_cost_priors.py  export_results_pdf.py  grader_eval.py  import_oss_issues.py  seed_oss_corpus.py  sync_task_counts.py  validate_tasks.py
tasks/v3/oss-jiff-strftime-negpad/repo/: Cargo.toml
tests/: test_agent_loop.py  test_agentic_grader.py  test_backend.py  test_cli.py  test_cli_agents.py  test_compare.py  test_cost_estimate.py  test_dataset.py  test_db.py  test_discrimination.py  test_docker_executor.py  test_effort.py  test_grader_eval.py  test_leaderboard.py  (+11 more)
(+714 files in other folders)
